[package]
name = "retainer"
version = "0.3.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Minimal async cache in Rust with support for key expirations "
repository = "https://github.com/whitfin/retainer"
keywords = ["async", "futures", "caching", "expiration", "ttl"]
categories = ["algorithms", "asynchronous", "caching", "data-structures"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.17"
rand = "0.8.5"
async-lock = "2.5.0"
async-timer = "0.7.4"

[dev-dependencies]
smol = "1.2.5"
tokio = { version = "1.18.2", features = ["full"] }
async-std = { version = "1.11.0", features = ["attributes"] }
simple_logger = "2.1.0"
